--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,18 +18,27 @@ permissions:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-    name: Test on OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
+    runs-on: ${{ matrix.os }}
+    name: Test on OTP ${{matrix.version.otp}} / Elixir ${{matrix.version.elixir}} / OS ${{matrix.version.os}}
     strategy:
       matrix:
-        otp: ["25.0.4"]
-        elixir: ["1.14.1"]
+        version:
+          [
+            { otp: "27", elixir: "1.17.x", os: "ubuntu-latest" },
+            { otp: "26", elixir: "1.16.x", os: "ubuntu-latest" },
+            { otp: "26", elixir: "1.15.x", os: "ubuntu-latest" },
+            { otp: "25", elixir: "1.14.x", os: "ubuntu-22.04" },
+            { otp: "24", elixir: "1.13.x", os: "ubuntu-20.04" },
+            { otp: "24", elixir: "1.12.x", os: "ubuntu-20.04" },
+            { otp: "23", elixir: "1.11.x", os: "ubuntu-20.04" }
+          ]
     steps:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          otp-version: ${{matrix.otp}}
-          elixir-version: ${{matrix.elixir}}
+          otp-version: ${{matrix.version.otp}}
+          elixir-version: ${{matrix.version.elixir}}
+          version-type: strict
 
       - name: Checkout code
         uses: actions/checkout@v3
