--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,13 @@ jobs:
       matrix:
         version:
           [
-            { otp: "27", elixir: "1.17.x", os: "ubuntu-latest" },
-            { otp: "26", elixir: "1.16.x", os: "ubuntu-latest" },
-            { otp: "26", elixir: "1.15.x", os: "ubuntu-latest" },
-            { otp: "25", elixir: "1.14.x", os: "ubuntu-22.04" },
-            { otp: "24", elixir: "1.13.x", os: "ubuntu-20.04" },
-            { otp: "24", elixir: "1.12.x", os: "ubuntu-20.04" },
-            { otp: "23", elixir: "1.11.x", os: "ubuntu-20.04" }
+            { otp: "27", elixir: "1.17.0", os: "ubuntu-latest" },
+            { otp: "26", elixir: "1.16.0", os: "ubuntu-latest" },
+            { otp: "26", elixir: "1.15.0", os: "ubuntu-latest" },
+            { otp: "25", elixir: "1.14.0", os: "ubuntu-22.04" },
+            { otp: "24", elixir: "1.13.0", os: "ubuntu-20.04" },
+            { otp: "24", elixir: "1.12.0", os: "ubuntu-20.04" },
+            { otp: "23", elixir: "1.11.0", os: "ubuntu-20.04" }
           ]
     steps:
       - name: Set up Elixir
