--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,23 @@ permissions:
   contents: read
 
 jobs:
+  format:
+    runs-on: ubuntu-latest
+    name: Test code format
+    steps:
+      - name: Set up Elixir
+        uses: erlef/setup-beam@v1
+        with:
+          otp-version: "25"
+          elixir-version: "1.14.0"
+          version-type: strict
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Check Formatting
+        run: mix format --check-formatted
+
   test:
     runs-on: ${{ matrix.version.os }}
     name: Test on OTP ${{matrix.version.otp}} / Elixir ${{matrix.version.elixir}} / OS ${{matrix.version.os}}
@@ -71,9 +88,6 @@ jobs:
 
       - name: Compiles without warnings
         run: mix compile --warnings-as-errors
-
-      - name: Check Formatting
-        run: mix format --check-formatted
 
       - name: Run tests
         run: mix test
